# sol_chess

./: .gitignore  Cargo.toml  README.md  build-web.sh  clean  deploy-ltpd.sh  dev  run-local.sh
src/: board.rs  game.rs  generator.rs  lib.rs  main.rs  solver.rs
src/board/: cmove.rs  constants.rs  errors.rs  piece.rs  square.rs
src/engine/: board.rs  cmove.rs  constants.rs  coord.rs  errors.rs  mod.rs  move.rs  piece.rs  square.rs
src/game/: button.rs  color.rs  game.rs  sound.rs  texture.rs
src/generator/: generator.rs
src/solver/: mod.rs  solver.rs
tools/: scripts.sh
tools/puzzle_checker/: gen_games.sh
tools/puzzle_checker/games/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
web/: index.html
