[package]
name = "sol_chess"
version = "0.1.1"
edition = "2024"
default-run = "sol_chess"

[dependencies]
argh = "0.1.13"
eyre = "0.6.12"
macroquad = { version = "0.4.14", features = ["audio"] }
quad-snd = "0.2.8"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
rand = "0.9.2"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
